--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "server=localhost; database=vega; user id=postgres; password=postgres;"
+    "Default": "server=localhost; database=aspnetcore-starter; user id=postgres; password=postgres;"
   },
   "Logging": {
     "IncludeScopes": false,
