add jwt settings

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "Default": "server=localhost; database=aspnetcore-starter; user id=postgres; password=postgres;"
   },
+  "JWTSettings": {
+    "SecretKey": "secret_key!@#$%",
+    "Issuer": "dotnet_skeleton",
+    "Audience": "DotnetSkeletonApi"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
