added authentication service

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,7 +5,8 @@
   "JWTSettings": {
     "SecretKey": "secret_key!@#$%",
     "Issuer": "dotnet_skeleton",
-    "Audience": "DotnetSkeletonApi"
+    "Audience": "DotnetSkeletonApi",
+    "ExpirationDays": 7
   },
   "Logging": {
     "IncludeScopes": false,
